# bim-des

./: .gitignore  README.md  pyproject.toml
bim_des/: bim.py
bim_des/assets/: runner_times_template.xlsx
bim_des/config/: runners.py
bim_des/ui/: main.py  ui_bim.py
