[project]
name = "bim-des"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dacite>=1.8.1",
    "dash-ag-grid>=31.2.0",
    "dash-bootstrap-components>=1.6.0",
    "dash-compose>=2023.3.12",
    "greenlet>=3.1.1",
    "ifcopenshell>=0.8.0",
    "natsort>=8.4.0",
    "networkx>=3.3",
    "openpyxl>=3.1.5",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "pymongo>=4.9.1",
    "salabim>=24.0.13",
    "scipy>=1.14.1",
    "shapely>=2.0.6",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "dash[diskcache]>=2.18.1",
]
